--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@pbe/react-yandex-maps": "^1.2.4",
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -13,6 +14,7 @@
         "@types/react-dom": "^18.2.4",
         "@types/react-router-dom": "^5.3.3",
         "classnames": "^2.3.2",
+        "firebase": "^9.22.2",
         "node-sass": "^8.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
